buttons on iphone 6/7/8 plus fixed

--- a/packages/webapp/src/containers/Profile/People/styles.scss
+++ b/packages/webapp/src/containers/Profile/People/styles.scss
@@ -255,7 +255,7 @@
 .inviteButton, .cancelButton {
   padding: 12px 50px;
   border-radius: 4px;
-  width: 45%;
+  width: 48%;
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -281,17 +281,6 @@
   color: #66738A;
 }
 
-@media screen and (min-height: 736px) and (min-width: 414px) {
-  .formActionsContainer {
-    margin-top: 100%;
-    position: absolute;
-    bottom: 32px;
-    margin-bottom: 0;
-  }
-  .inviteButton {
-    margin-right: 48px;
-  }
-}
 
 @media (min-width: 768px) {
   .formActionsContainer {
